Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131361

Intel skylake fails to build for Boot2Qt lts-6.5(.8)

XMLWordPrintable

    • Linux/Yocto
    • a2783e069 (6.8.1), 20e654dd4 (dev), 6b25ac802 (6.8), f23dafae3 (tqtc/lts-6.5)

      With latest meta-qt6(lts-6.5) submodule update, Intel Skylake fails build with qtquick3d error:

      04:12:30 | In file included from /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/recipe-sysroot-native/usr/lib/x86_64-poky-linux/gcc/x86_64-poky-linux/13.3.0/include/immintrin.h:39,
      04:12:30 |                  from /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/../../common/sys/intrinsics.h:15,
      04:12:30 |                  from /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/../../common/sys/mutex.h:7,
      04:12:30 |                  from /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/../../common/sys/thread.h:7,
      04:12:30 |                  from /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/default.h:8,
      04:12:30 |                  from /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/rtcore.cpp:6:
      04:12:30 | In function '__m128 _mm_dp_ps(__m128, __m128, int)',
      04:12:30 |     inlined from 'float embree::dot(const Vec3fa&, const Vec3fa&)' at /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/../../common/sys/../math/vec3fa.h:270:25,
      04:12:30 |     inlined from 'bool embree::similarityTransform(const AffineSpace3fa&, float*)' at /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/../../common/math/affinespace.h:324:12,
      04:12:30 |     inlined from 'bool pointQuery(embree::Scene*, RTCPointQuery*, RTCPointQueryContext*, RTCPointQueryFunction, void*)' at /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/rtcore.cpp:323:49:
      04:12:30 | /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/recipe-sysroot-native/usr/lib/x86_64-poky-linux/gcc/x86_64-poky-linux/13.3.0/include/smmintrin.h:243:10: error: '__builtin_ia32_dpps' needs isa option -msse4.1
      04:12:30 |   243 |   return (__m128) __builtin_ia32_dpps ((__v4sf)__X,
      04:12:30 |       |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      04:12:30 |   244 |                                        (__v4sf)__Y,
      04:12:30 |       |                                        ~~~~~~~~~~~~
      04:12:30 |   245 |                                        __M);
      04:12:30 |       |                                        ~~~~ 

       

      Full log attached.

        For Gerrit Dashboard: QTBUG-131361
        # Subject Branch Project Status CR V

            sapiippo Samuli Piippo
            gronoff Mikko Gronoff
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes