embree: disable SSE4.1

Disable also __SSE4.1__, this fixes build issue with GCC 13
after b0d6afa7e822728e2e7d198efe7eef6f78a429e0.

| In function '__m128 _mm_dp_ps(__m128, __m128, int)',
|     inlined from 'float embree::dot(const Vec3fa&, const Vec3fa&)' at src/3rdparty/embree/kernels/common/../../common/sys/../math/vec3fa.h:270:25,
|     inlined from 'bool embree::similarityTransform(const AffineSpace3fa&, float*)' at src/3rdparty/embree/kernels/common/../../common/math/affinespace.h:324:12,
|     inlined from 'bool pointQuery(embree::Scene*, RTCPointQuery*, RTCPointQueryContext*, RTCPointQueryFunction, void*)' at /home/qt/work/build/tmp/work/x86-64-v3-poky-linux/qtquick3d/6.5.8/git/src/3rdparty/embree/kernels/common/rtcore.cpp:323:49:
| /usr/lib/x86_64-poky-linux/gcc/x86_64-poky-linux/13.3.0/include/smmintrin.h:243:10: error: '__builtin_ia32_dpps' needs isa option -msse4.1

Fixes: QTBUG-131361
Change-Id: Id71d6f933b6046c7a9cf40154b3ad2fb6abea8f6
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
(cherry picked from commit 20e654dd4346f6a5479b08e553db3da71dc3fd94)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 6b25ac80282bc91ae0f66fa7f3ddd9bb65937830)